# ghostRbot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/analysis/: Cargo.toml
crates/analysis/src/: contract_analyzer.rs  lib.rs  scorer.rs  social_analyzer.rs  wallet_analyzer.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  state.rs
crates/api/src/middleware/: auth.rs  logging.rs
crates/api/src/routes/: auth.rs  config.rs  exchange.rs  intelligence.rs  market_maker.rs  mod.rs  orders.rs  spa.rs  trading.rs  users.rs  volume.rs  wallets.rs
crates/core/: Cargo.toml
crates/core/models/: analysis.rs  discovery.rs  order.rs  user.rs  volume.rs  wallet.rs
crates/core/src/: config.rs  error.rs  lib.rs
crates/core/src/models/: fee.rs  limit_order.rs  mod.rs  session.rs  transaction.rs
crates/db/: Cargo.toml
crates/db/migrations/: 001_init.sql
crates/db/src/: lib.rs  queries.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs
crates/discovery/src/sources/: birdeye.rs  dexscreener.rs  mod.rs  pancakeswap.rs  pumpfun.rs  raydium.rs  uniswap.rs
crates/exchange-bot/: Cargo.toml
crates/exchange-bot/src/: binance.rs  bybit.rs  gateio.rs  kucoin.rs  lib.rs  okx.rs  types.rs
crates/intelligence/: Cargo.toml
crates/intelligence/src/: briefings.rs  lib.rs  market.rs  narrative.rs  news.rs  risk_intel.rs  router.rs  sentiment.rs  smart_money.rs  whale.rs
crates/limit-orders/: Cargo.toml
crates/limit-orders/src/: lib.rs
crates/market-maker/: Cargo.toml
crates/market-maker/src/: lib.rs
crates/monitoring/: Cargo.toml
crates/monitoring/src/: lib.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: lib.rs
crates/telegram/: Cargo.toml
crates/telegram/src/: lib.rs
crates/trading-engine/: Cargo.toml
crates/trading-engine/src/: bsc.rs  lib.rs  position_manager.rs  risk_manager.rs  solana.rs
crates/volume-bot/: Cargo.toml
crates/volume-bot/src/: lib.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  i18n.js  index.css  intelligenceApi.js
frontend/src/components/: Layout.jsx  Paywall.jsx
frontend/src/locales/: ar.json  en.json
frontend/src/pages/: AdminLogin.jsx  ChangePassword.jsx  Chat.jsx  CoinAnalysis.jsx  Dashboard.jsx  ExchangeBot.jsx  GainersLosers.jsx  Landing.jsx  Login.jsx  Market.jsx  MarketMaker.jsx  Narratives.jsx  Orders.jsx  ResetPassword.jsx  RiskCheck.jsx  Sentiment.jsx  TradeSetup.jsx  Users.jsx  VolumeBot.jsx  Wallets.jsx
src/: main.rs
