[workspace]
members = [
    "crates/core",
    "crates/db",
    "crates/api",
    "crates/exchange-bot",
    "crates/trading-engine",
    "crates/volume-bot",
    "crates/market-maker",
    "crates/limit-orders",
    "crates/discovery",
    "crates/analysis",
    "crates/intelligence",
    "crates/monitoring",
    "crates/notifications",
    "crates/telegram",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
dashmap = "6"
moka = { version = "0.12", features = ["future"] }

[package]
name = "ghostrbot"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ghostrbot"
path = "src/main.rs"

[dependencies]
ghostRbot-core = { path = "crates/core" }
ghostRbot-db = { path = "crates/db" }
ghostRbot-api = { path = "crates/api" }
ghostRbot-exchange-bot = { path = "crates/exchange-bot" }
ghostRbot-trading-engine = { path = "crates/trading-engine" }
ghostRbot-volume-bot = { path = "crates/volume-bot" }
ghostRbot-market-maker = { path = "crates/market-maker" }
ghostRbot-limit-orders = { path = "crates/limit-orders" }
ghostRbot-discovery = { path = "crates/discovery" }
ghostRbot-analysis = { path = "crates/analysis" }
ghostRbot-intelligence = { path = "crates/intelligence" }
ghostRbot-monitoring = { path = "crates/monitoring" }
ghostRbot-notifications = { path = "crates/notifications" }
ghostRbot-telegram = { path = "crates/telegram" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
