[package]
name = "ghostRbot-api"
version.workspace = true
edition.workspace = true

[dependencies]
ghostRbot-core = { path = "../core" }
ghostRbot-db = { path = "../db" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
argon2.workspace = true
rand.workspace = true
tracing.workspace = true
reqwest.workspace = true
