[package]
name = "ghostRbot-exchange-bot"
version.workspace = true
edition.workspace = true

[dependencies]
ghostRbot-core = { path = "../core" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono.workspace = true
uuid.workspace = true
base64 = "0.22"
async-trait = "0.1"
