[package]
name = "ghostRbot-intelligence"
version.workspace = true
edition.workspace = true

[dependencies]
ghostRbot-core = { path = "../core" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
async-trait = "0.1"
moka.workspace = true
feed-rs = "2"
