[package]
name = "ghostRbot-monitoring"
version.workspace = true
edition.workspace = true

[dependencies]
ghostRbot-core = { path = "../core" }
ghostRbot-trading-engine = { path = "../trading-engine" }
ghostRbot-notifications = { path = "../notifications" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
