[package]
name = "ghostRbot-notifications"
version.workspace = true
edition.workspace = true

[dependencies]
ghostRbot-core = { path = "../core" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
