[package]
name = "ghostRbot-telegram"
version.workspace = true
edition.workspace = true

[dependencies]
ghostRbot-core = { path = "../core" }
ghostRbot-intelligence = { path = "../intelligence" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
