[package]
name = "ghostRbot-trading-engine"
version.workspace = true
edition.workspace = true

[dependencies]
ghostRbot-core = { path = "../core" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait = "0.1"
uuid.workspace = true
chrono.workspace = true
